--- a/01_sesiones/econometria2_v301.Rmd
+++ b/01_sesiones/econometria2_v301.Rmd
@@ -37,7 +37,11 @@ options(htmltools.dir.version = FALSE)
 
 ## 1.2. Naturaleza de las series de tiempo
 
-Existen 4 estructuras básicas de datos^[**Revisar:** Wooldridge - Cap. 1.3]: 
+Existen 4 estructuras básicas de datos:
+
+```{marginfigure}
+**Revisar:** Wooldridge - Cap. 1.3
+```
 
 - Datos de corte tranversal: Muestra de unidades tomadas en algún punto dado en el tiempo.
 
@@ -64,7 +68,11 @@ include_graphics('figures/fig_01_03.png')
 include_graphics('figures/fig_01_04.png')
 ```
 
-Características de las series de tiempo^[**Revisar:** Wooldridge - Cap. 10.1 & 1.3]:
+Características de las series de tiempo:
+
+```{marginfigure}
+**Revisar:** Wooldridge - Cap. 10.1 & 1.3.
+```
 
 - Orden temporal: El pasado afecta al futuro.
 
@@ -82,7 +90,11 @@ include_graphics('figures/fig_01_06.png')
 
 ## 1.3. Componentes de las series de tiempo
 
-Los componentes latentes de una serie de tiempo son^[**Revisar:** Bee Dagum & Bianconcini - Cap. 2.1.]:
+Los componentes latentes de una serie de tiempo son:
+
+```{marginfigure}
+**Revisar:** Bee Dagum & Bianconcini - Cap. 2.1.
+```
 
 1. Tendencia ($T$): El valor esperado de largo plazo (tendencia secular).
 2. Ciclo ($C$): Movimientos sobrepuestos a lo largo de la tendencia de largo plazo.
@@ -131,7 +143,11 @@ Algunos modelos de series de tiempo:
 
 $y_t = \beta_0 + \beta_1 z_t + u_t, \:t = 1, 2, \,..., n$
 
-- Modelos con rezagos distribuidos finitos (FDL). Modeliza la relación de cuando una o más variables influyen en $y$ en forma rezagada^[Generalizando:$y_t = \alpha_0 + \delta_0 z_t + \delta_1 z_{t-1} + \delta_2 z_{t-2} + \, ... \, + \delta_q z_{t-q} + u_t$] .
+- Modelos con rezagos distribuidos finitos (FDL). Modeliza la relación de cuando una o más variables influyen en $y$ en forma rezagada.
+
+```{marginfigure}
+Generalizando:$y_t = \alpha_0 + \delta_0 z_t + \delta_1 z_{t-1} + \delta_2 z_{t-2} + \, ... \, + \delta_q z_{t-q} + u_t$
+```
 
 $y_t = \alpha_0 + \delta_0 z_t + \delta_1 z_{t-1} + \delta_2 z_{t-2} + u_t, \:t = 1, 2, \,..., n$
 
@@ -145,7 +161,94 @@ include_graphics('figures/fig_01_07.png')
 
 Propensión de largo plazo (LRP): El cambio en $y$ debido a un cambio permanente de $z$. Es la suma de los coeficientes de la $z$ actual y sus rezagos ($\delta_0 + \delta_1 + \delta_2$).
 
+# S2: Propiedades de muestras finitas de MCO bajo los supuestos clásicos 
+
+## 2.1. Datos de la sesión
+
+**Fecha de la sesión:** 
+2022-08-31
+
+**Lecturas obligatorias:**
+
+- Wooldridge - Cap. 10.3
+
+**Lecturas opcionales:**
+
+- Wooldridge - Cap. 2-4
+
+##  2.2. Insesgamiento de MCO
+
+```{marginfigure}
+**Revisar:** Supuestos de la Regresión Lineal Múltiple (RLM) en Wooldridge - Cap. 3.3.
+```
+
+**Supuesto ST.1: Lineal en los parámetros**
+
+El proceso estocástico $\{ (x_{t1},\, x_{t2},\, ...,\, x_{tk}, \, y_{t}): \: t = 1, \, 2, \, ..., \, n \}$ sigue el modelo lineal:
 
 
+$y_t = \beta_0 + \beta_1 x_{t1} + \beta_2 x_{t2} +  \, ... \, + \beta_k x_{tk} + u_t,$
+
+donde $\{u_t: \, t = 1, \, 2, \, ..., \, n\}$ es la secuencia de errores, y $n$ es el número de observaciones.
+
+**Supuesto ST.2: No hay colinealidad perfecta**
+
+En la muestra no hay variables independientes que sean constantes ni que sean una combinación lineal perfecta de las otras.
+
+**Supuesto ST.3: Media condicional cero** 
+
+Para cada $t$, dadas las variables explicativas para todos los periodos, el valor esperado del error $u$, es cero. Matemáticamente:
+
+$\mathsf{E}(u_t | \textbf{X}) = 0, \, t = 1, \, 2, \, ..., \, n.$
+
+**Teorema ST.1: Insesgamiento de los estimadores de MCO**
+
+Bajo los supuestos ST.1, ST.2, y ST.3, los estimadores de MCO son insesgados condicionales sobre $\textbf{X}$, y por tanto también incondicionalmente: $\mathsf{E}(\widehat{\beta}_j)  = \beta_j, \, j = 0, \, 1, \, ..., \, k.$
+
+##  2.3. Teorema Gauss-Markov
+
+```{marginfigure}
+**Revisar:** Supuestos de Gauss-Markov en Wooldridge - Cap. 3.4-3.5.
+```
+
+**Supuesto ST.4: Homocedasticidad**
+
+La varianza de $u_t$, condicional en $\textbf{X}$, es la misma para cualquier  $t: \, \mathsf{Var}(u_t | \textbf{X}) = \mathsf{Var}(u_t) = \sigma^2, \, t=1, \, 2, \, ..., \, n.$
+
+**Supuesto ST.5: No hay correlación serial**
+
+Los errores, condicionales sobre $\textbf{X}$, en dos periodos distintos, no están correlacionados: $\mathsf{Corr}(u_t, u_s | \textbf{X}) = 0$, para cualquier $t \neq s$.
+
+**Teorema ST.2: Varianzas de muestreo de los estimadores de MCO**
+
+Con base en los supuestos ST.1 y ST.5 de Gauss-Markov para las series de tiempo, la varianza de $\widehat{\beta}_j$, condicional sobre $\textbf{X}$, es:
+
+$\mathsf{Var}(\widehat{\beta}_j | \textbf{X}) = \frac{ \sigma^2}{STC_j (1-R^2_j)}, \, j = 1, \, ...,\, k,$
+
+donde $STC_j$ es la suma total de cuadrados de $x_{tj}$ y $R^2_j$ es la R-cuadrada de la regresión de $x_j$ sobre las otras variables independientes.
+
+**Teorema ST.3: Estimación insesgada de $\sigma^2$**
+
+Bajo los supuestos ST.1 a ST.5, el estimador $\widehat{\sigma^2} = \frac{SRC}{gl}$ es un estimador insesgado $\sigma^2$, donde $gl = n-k-1$.
+
+**Teorema ST.4: Teorema Gauss-Markov**
+
+Bajo los supuestos ST.1 a ST.5, los estimadores de MCO son los mejores estimadores lineales insesgados condicionales sobre $\textbf{X}$.
+
+##  2.4. Inferencia
+
+```{marginfigure}
+**Revisar:** Supuestos de distribución de muestreo en Wooldridge - Cap. 4.1.
+```
+
+**Supuesto ST.6: Normalidad**
+
+Los errores $u_t$ son independientes de $\textbf{X}$ y son independientes e idénticamente distribuidos como $\mathsf{Normal}(0, \, \sigma^2)$.
+
+**Teorema ST.5: Distribuciones de muestreo normales**
+
+Bajo los supuestos ST.1 a ST.6, los supuestos del MCL para series de tiempo, los estimadores de MCO se distribuyen de forma normal, condicionales sobre $\textbf{X}$.
+
+Bajo la hipótesis nula, cada estadístico $t$ tiene una distribución $t$, y cada estadístico $F$ tiene una distribución $F$. También es válida la construcción usual de los intervalos de confianza.
 
 
