--- a/01_sesiones/econometria2_v301.Rmd
+++ b/01_sesiones/econometria2_v301.Rmd
@@ -251,4 +251,64 @@ Bajo los supuestos ST.1 a ST.6, los supuestos del MCL para series de tiempo, los
 
 Bajo la hipótesis nula, cada estadístico $t$ tiene una distribución $t$, y cada estadístico $F$ tiene una distribución $F$. También es válida la construcción usual de los intervalos de confianza.
 
+# S3: Introducción a R
 
+```{marginfigure}
+**Tomado de:** Healy, K. (2008). Data Visualization. A practical introduction (https://socviz.co).
+```
+
+Les comparto el script de la clase de hoy.
+
+```{r, echo = T, eval = FALSE, error=FALSE, warning=FALSE, message=FALSE}
+# Instalacion de paquetes
+my_packages <- c("tidyverse", "broom", "coefplot", "cowplot",
+                 "gapminder", "GGally", "ggrepel", "ggridges", "gridExtra",
+                 "here", "interplot", "margins", "maps", "mapproj",
+                 "mapdata", "MASS", "quantreg", "rlang", "scales",
+                 "survey", "srvyr", "viridis", "viridisLite", "devtools")
+
+install.packages(my_packages, repos = "http://cran.rstudio.com")
+
+## Uso de librerias
+library(devtools)
+install_github("kjhealy/socviz")
+devtools::install_github("kjhealy/socviz")
+
+# Introduccion
+## Librerias
+library(tidyverse)
+library(socviz)
+library(gapminder)
+
+## Objetos
+c (1, 2, 3, 1, 3, 5, 25)
+my_numbers <- c (1, 2, 3, 1, 3, 5, 25)
+your_numbers <- c(5, 31, 29, 4, 89, 43)
+
+my_numbers
+your_numbers
+
+## Funciones
+### Help
+? mean
+
+mean(my_numbers)
+mean_my_numbers <- mean(my_numbers)
+
+# Dataframes
+titanic
+class(titanic)
+class(my_numbers)
+class(my_packages)
+titanic$percent
+
+## Crear un data frame
+url <- "https://cdn.rawgit.com/kjhealy/viz-organdata/master/organdonation.csv"
+organs <- read_csv(file = url)
+
+# Plots
+gapminder
+p <- ggplot(data = gapminder,
+       mapping  = aes(x = gdpPercap, y = lifeExp))
+p + geom_point()
+```
